--- a/tasks.json
+++ b/tasks.json
@@ -1,17 +1,32 @@
 {
-    "5d705bcfde0f4db3875d458f10359215": {
-        "id": "5d705bcfde0f4db3875d458f10359215",
-        "title": "Tasks deletion",
-        "done": true
-    },
     "c1d92acb9b714a2d87a9326c08ae9706": {
         "id": "c1d92acb9b714a2d87a9326c08ae9706",
         "title": "Setup TUI application",
-        "done": false
+        "done": true
     },
     "e751c320d7ef43ea88cabc95bc548660": {
         "id": "e751c320d7ef43ea88cabc95bc548660",
-        "title": "Make functioning checkbox",
+        "title": "Make functioning checkbox in TUI...",
+        "done": true
+    },
+    "bdbf199216cd4faf8aa33275fda0e57a": {
+        "id": "bdbf199216cd4faf8aa33275fda0e57a",
+        "title": "Make task widget update after editing the title",
+        "done": false
+    },
+    "2e872e97e5934f85b5219346e0bb1b58": {
+        "id": "2e872e97e5934f85b5219346e0bb1b58",
+        "title": "Make TUI able to add a new task",
+        "done": true
+    },
+    "5545398dc3cf4284beedd4a5836e8561": {
+        "id": "5545398dc3cf4284beedd4a5836e8561",
+        "title": "Make TUI tasks list pettier - buttons to the right",
+        "done": false
+    },
+    "ce0013da51634760a280e0e2203928b2": {
+        "id": "ce0013da51634760a280e0e2203928b2",
+        "title": "Make new task appear in TUI",
         "done": false
     }
 }
