added app configuration and default tasks list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,6 @@
     "python.testing.pytestArgs": [
         "tests"
     ],
-
     // isort
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
@@ -19,33 +18,30 @@
             "source.organizeImports": "explicit"
         },
     },
-
     // black
     // "black-formatter.path": [".venv/Scripts/python", "-m", "black"],
     "black-formatter.importStrategy": "fromEnvironment",
-    "black-formatter.args": ["--config", "pyproject.toml"],
-
+    "black-formatter.args": [
+        "--config",
+        "pyproject.toml"
+    ],
     // flake8
     // "flake8.args": [
     //     "--config=setup.cfg",
     // ],
-
     // ruff
     "ruff.lint.args": [
         "--config=pyproject.toml",
     ],
-
     // autodocstring
     "autoDocstring.docstringFormat": "one-line-sphinx",
     "autoDocstring.guessTypes": true,
     "autoDocstring.quoteStyle": "\"\"\"",
-    
     // mypy
     "mypy-type-checker.args": [
         "--config-file=pyproject.toml",
     ],
     "mypy-type-checker.importStrategy": "fromEnvironment",
-
     // exclude files from explorer by pattern
     "files.exclude": {
         "**/__pycache__": true,
@@ -54,8 +50,14 @@
         "**/*.egg-info": true,
         ".venv": true,
     },
-
     // todo tree
     "todo-tree.regex.enableMultiLine": true,
     "python.analysis.autoImportCompletions": true,
+
+    // VSCode
+    // This is a workaround to get VSCode to set a proper folder for user data
+    // Issue about VSCode changing XDG env vars: https://github.com/microsoft/vscode/issues/237608
+    "terminal.integrated.env.linux": {
+        "XDG_DATA_HOME": "/home/kirill/.local/share",
+    }
 }
