--- a/tasks.json
+++ b/tasks.json
@@ -28,5 +28,20 @@
         "id": "ce0013da51634760a280e0e2203928b2",
         "title": "Make new task appear in TUI",
         "done": true
+    },
+    "eafcfb36e18046fa96cc9adb126766ec": {
+        "id": "eafcfb36e18046fa96cc9adb126766ec",
+        "title": "Setup repo everywhere",
+        "done": true
+    },
+    "422cf702d7874b47830b639dc87c4fe4": {
+        "id": "422cf702d7874b47830b639dc87c4fe4",
+        "title": "Make tasks file path configurable",
+        "done": false
+    },
+    "c925945b2bbb428f81a0f1bb5629fa8b": {
+        "id": "c925945b2bbb428f81a0f1bb5629fa8b",
+        "title": "How to proceed with tasks lists?",
+        "done": false
     }
 }
