--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "python.testing.pytestArgs": [
         "tests"
     ],
+    
     // isort
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
@@ -18,38 +19,28 @@
             "source.organizeImports": "explicit"
         },
     },
+    
     // black
-    // "black-formatter.path": [".venv/Scripts/python", "-m", "black"],
     "black-formatter.importStrategy": "fromEnvironment",
     "black-formatter.args": [
         "--config",
         "pyproject.toml"
     ],
-    // flake8
-    // "flake8.args": [
-    //     "--config=setup.cfg",
-    // ],
+
     // ruff
-    "ruff.lint.args": [
-        "--config=pyproject.toml",
-    ],
+    "ruff.configuration": "pyproject.toml",
+
     // autodocstring
     "autoDocstring.docstringFormat": "one-line-sphinx",
     "autoDocstring.guessTypes": true,
     "autoDocstring.quoteStyle": "\"\"\"",
+
     // mypy
     "mypy-type-checker.args": [
         "--config-file=pyproject.toml",
     ],
     "mypy-type-checker.importStrategy": "fromEnvironment",
-    // exclude files from explorer by pattern
-    "files.exclude": {
-        "**/__pycache__": true,
-        ".mypy_cache": true,
-        ".pytest_cache": true,
-        "**/*.egg-info": true,
-        ".venv": true,
-    },
+
     // todo tree
     "todo-tree.regex.enableMultiLine": true,
     "python.analysis.autoImportCompletions": true,
@@ -59,5 +50,13 @@
     // Issue about VSCode changing XDG env vars: https://github.com/microsoft/vscode/issues/237608
     "terminal.integrated.env.linux": {
         "XDG_DATA_HOME": "/home/kirill/.local/share",
-    }
+    },
+    // exclude files from explorer by pattern
+    "files.exclude": {
+        "**/__pycache__": true,
+        ".mypy_cache": true,
+        ".pytest_cache": true,
+        "**/*.egg-info": true,
+        ".venv": true,
+    },
 }
